src/FinancialForce Accounting/objects/AsOfAging__c.object
<CustomObject>
    <customHelpPage>helpasofaging</customHelpPage>
    <description>Stores information about the As of Aging process for the owned company.</description>
    <fields>
        <fullName>ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AsOfDate__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BatchProcessStatus__c</fullName>
        <formula>TEXT(BatchProcess__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Process Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>As of Aging</relationshipLabel>
        <relationshipName>AsOfAging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>As of Aging</relationshipLabel>
        <relationshipName>AsofAging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProcessCompleted__c</fullName>
        <label>Process Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProcessStarted__c</fullName>
        <label>Process Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProcessStatus__c</fullName>
        <label>Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>As of Aging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProcessCompleted__c</columns>
        <columns>ProcessStarted__c</columns>
        <columns>AsOfDate__c</columns>
        <columns>OwnerCompany__c</columns>
        <columns>ProcessStatus__c</columns>
        <columns>BatchProcessStatus__c</columns>
        <columns>BatchProcess__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AOA{0000000}</displayFormat>
        <label>As of Aging Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>As of Aging</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>